# gha-changelog-syncer

./: .env.example  .gitignore  .mergify.yml  README.md  action.yml  changelog_syncer.py  pyproject.toml  requirements.txt  workflow_example.yml
.github/: dependabot.yml
gha_changelog_syncer/: __init__.py  cli_handler.py  gha_handler.py
