[tool.poetry]
name = "gha-changelog-syncer"
version = "0.1.0"
description = "Synchronize GitHub Pull Request to Notion Database"
authors = ["Charly Laurent <charly.laurent@mergify.com>"]
readme = "README.md"
packages = [{include = "gha_changelog_syncer"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.1"
python-dateutil = "^2.9.0"
daiquiri = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli_handler = 'gha_changelog_syncer.cli_handler:handle'
gha_handler = 'gha_changelog_syncer.gha_handler:handle'
